<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Week4PizzaOrder</string>
    <string name="label_specials">Free specials</string>
    <string name="label_num_pizzas">Number of Pizzas</string>
    <string name="label_small">small</string>
    <string name="label_medium">medium</string>
    <string name="label_large">large</string>
    
    <string name="label_pepperoni">pepperoni</string>
    <string name="label_pineappple">pineapple</string>
    <string name="label_tofu">tofu</string>
    <string name="label_toppings">Toppings</string>
    <string name="label_size">Size</string>
    <string name="label_order_summary">Order Summary</string>
    <string name="label_name">Name</string>
    <string name="label_hint_name">Enter your name</string>



</resources>