<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_name"
        android:textSize="@dimen/text_size_medium"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_toEndOf="@id/text_name"
        android:layout_alignBottom="@+id/text_name"
        android:text="@string/label_hint_name"/>

    <TextView
        android:id="@+id/text_topping"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_name"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_toppings"
        android:textSize="@dimen/text_size_medium"/>

    <CheckBox
        android:id="@+id/check_pepperoni"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_topping"
        android:text="@string/label_pepperoni"/>

    <CheckBox
        android:id="@+id/check_pineapple"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_toEndOf="@+id/check_pepperoni"
        android:layout_alignBottom="@id/check_pepperoni"
        android:text="@string/label_pineappple"/>

    <CheckBox
        android:id="@+id/check_tofu"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_alignBottom="@id/check_pineapple"
        android:layout_toEndOf="@+id/check_pineapple"
        android:text="@string/label_tofu"/>

    <TextView
        android:id="@+id/text_size"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/check_pepperoni"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_size"
        android:textSize="@dimen/text_size_medium"/>


    <RadioGroup
        android:id="@+id/radio_group_size"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_size"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_small"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_medium"
            android:text="@string/label_small"/>
        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_medium"
            android:text="@string/label_medium"/>
        <RadioButton
            android:id="@+id/radio_large"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_medium"
            android:text="@string/label_large"/>
    </RadioGroup>

    <TextView
        android:id="@+id/text_specials"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/radio_group_size"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_specials"
        android:textSize="@dimen/text_size_medium"/>

    <Spinner
        android:id="@+id/spinner_specials"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_alignBaseline="@+id/text_specials"
        android:layout_toEndOf="@id/text_specials"
        android:layout_alignBottom="@id/text_specials"
        android:entries="@array/label_array_specials">
    </Spinner>

    <TextView
        android:id="@+id/text_num_pizzas"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_specials"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_num_pizzas"
        android:textSize="@dimen/text_size_medium"/>

    <SeekBar
        android:id="@+id/seekbar_num_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:max="5"
        android:layout_below="@+id/text_num_pizzas"
        android:layout_toEndOf="@+id/text_order_display" />

    <TextView
        android:id="@+id/text_num_pizzas_seekbar_progress"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignBottom="@id/seekbar_num_pizzas"
        android:text="@integer/int_default_num_pizzas"/>

    <TextView
        android:id="@+id/text_order_summary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_num_pizzas_seekbar_progress"
        android:text="@string/label_order_summary"
        android:textSize="@dimen/text_size_medium"/>

    <TextView
        android:id="@+id/text_order_display"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_size_medium"
        android:layout_below="@id/text_order_display"/>

</RelativeLayout>
